# tm-diff

./: CHANGELOG.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  setup.sh  tox.ini
.github/workflows/: python-package.yml
scripts/: tm-diff
tmDiff/: __main__.py  main.py  menudiff.py
