[metadata]
name = tm-diff
version = attr: tmDiff.__version__
author = Bernhard Arnold
author_email = bernhard.arnold@cern.ch
description = Compare the content of two XML trigger menus.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
classifiers =
    "Topic :: Software Development"
    "Topic :: Utilities"

[options]
python_requires = >=3.9
packages = find:
install_requires =
    tm-table~=0.13.0
test_suite = tests

[options.packages.find]
exclude=tests

[options.entry_points]
console_scripts =
    tm-diff = tmDiff.__main__:main

[mypy]

[mypy-tmTable.*]
ignore_missing_imports = True
